add flac win32 file

--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,7 @@ fabric.properties
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
-*.exe
+#*.exe
 *.exe~
 *.dll
 *.so
